WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114537
[Mac] REGRESSION: Auto substitution strips new lines
https://bugs.webkit.org/show_bug.cgi?id=114537
Summary
[Mac] REGRESSION: Auto substitution strips new lines
Ryosuke Niwa
Reported
2013-04-12 15:01:10 PDT
Reproduction steps: 1. Open Language & Text system preference 2. Setup "helloleworld" to be replaced by "hello world" (copy paste it) 3. Type "helloleworld" into a content editable region or text fields. Expected result: "helloleworld" is replaced by "hello world" Actual result: "helloleworld" is replaced by "hello world".
Attachments
Fixes the bug
(10.75 KB, patch)
2013-04-12 15:12 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Updated for ToT
(10.75 KB, patch)
2013-04-12 15:17 PDT
,
Ryosuke Niwa
enrica
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2013-04-12 15:01:32 PDT
<
rdar://problem/12656747
>
Ryosuke Niwa
Comment 2
2013-04-12 15:12:57 PDT
Created
attachment 197893
[details]
Fixes the bug
Ryosuke Niwa
Comment 3
2013-04-12 15:17:12 PDT
Created
attachment 197894
[details]
Updated for ToT
Enrica Casucci
Comment 4
2013-04-12 15:41:12 PDT
Comment on
attachment 197894
[details]
Updated for ToT View in context:
https://bugs.webkit.org/attachment.cgi?id=197894&action=review
Look good.
> Source/WebCore/ChangeLog:12 > + CompositeEditCommand::apply after SpellingCorrectionCommand::doApply. So replaced the check in apply
So I replaced
Ryosuke Niwa
Comment 5
2013-04-12 15:43:39 PDT
Comment on
attachment 197894
[details]
Updated for ToT View in context:
https://bugs.webkit.org/attachment.cgi?id=197894&action=review
>> Source/WebCore/ChangeLog:12 >> + CompositeEditCommand::apply after SpellingCorrectionCommand::doApply. So replaced the check in apply > > So I replaced
Did s/So replaced/Replaced/ to match the sentence style elsewhere.
Ryosuke Niwa
Comment 6
2013-04-12 15:44:31 PDT
Committed
r148306
: <
http://trac.webkit.org/changeset/148306
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug