Source/WebCore/editing/CompositeEditCommand.cpp
@@ -216,7 +216,7 @@ void CompositeEditCommand::apply()
 
     // Only need to call appliedEditing for top-level commands,
     // and TypingCommands do it on their own (see TypingCommand::typingAddedToOpenCommand).
-    if (!isTypingCommand())
+    if (!callsAppliedEditingInDoApply())
         frame->editor()->appliedEditing(this);
     setShouldRetainAutocorrectionIndicator(false);
 }
@@ -242,6 +242,11 @@ bool CompositeEditCommand::preservesTypingStyle() const
 }
 
 bool CompositeEditCommand::isTypingCommand() const
+{
+    return false;
+}
+
+bool CompositeEditCommand::callsAppliedEditingInDoApply() const
 {
     return false;
 }
